[project]
name = "my-agent-project"
version = "0.1.0"
dependencies = [
    "langchain-community>=0.3.31",
    "langchain-mcp-adapters>=0.1.11",
    "langchain-openai>=0.3.35",
    "langgraph>=0.6.10",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
